# digmultireader

./: Makefile.am  adcj.cc  adcj.h  adcjmultix.cc  common_defs.h  configure.in  daq_device_digitizer.cc  daq_device_digitizer.h  dcm2Impl.cc  digitizerTriggerHandler.cc  digitizerTriggerHandler.h  digitizer_plugin.cc  digitizer_plugin.h  jseb2Controller.cc  jseb2Controller.h  jseb2_EventBuffer.cc  jseb2_EventBuffer.h
